# Caducus

./: .gitignore  .kanbus.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: caducus-biblicus-contract.md
features/: configured_demo_story.feature  demo_vertical_slice.feature  environment.py
features/steps/: demo_steps.py
infra/github-rulesets/: main-branch-protection.json
project/events/: 2026-03-14T16:04:45.921Z__bce2fb56-9085-4d89-899e-0989c089a349.json  2026-03-14T16:04:53.470Z__03909d78-ebe3-4787-a3ee-f37df583c779.json  2026-03-14T16:05:02.249Z__b586606d-5749-4156-a11e-28435e541157.json  2026-03-14T16:05:18.026Z__e0bb7972-1025-459c-99e5-83a1d0929349.json  2026-03-14T16:05:19.502Z__2fc178cb-0bd4-4b62-b021-2c40a81a36fd.json  2026-03-14T16:05:20.638Z__93d3b151-4332-4c9a-82df-995e8526e232.json  2026-03-14T16:05:31.695Z__f38709a5-cc50-4256-813c-5115a9927595.json  2026-03-14T16:18:25.441Z__e1954590-b108-420a-aab6-a399c05b92c9.json  2026-03-14T16:23:32.637Z__14c5bff4-f962-41a3-9871-c6da6d9fcd6b.json  2026-03-14T16:23:33.115Z__f9807f21-f2ff-4c1e-97d7-f40eda4f2c7b.json  2026-03-14T16:23:33.569Z__10c669b8-8303-4cb2-b09b-f32de8a6d655.json  2026-03-14T16:23:34.019Z__b0673e7e-5051-4c86-8a7e-ff5052cd860c.json  2026-03-14T16:23:40.103Z__e040d5e3-1115-478f-8ad2-863047454381.json  2026-03-14T16:23:40.590Z__c08eb789-a47f-4767-8eaa-42f0fa309e8d.json  2026-03-14T16:23:41.058Z__e0bb9d38-35c2-4111-851c-1560f0a467fd.json  (+46 more)
scripts/: download_hdfs_demo.py
src/caducus.egg-info/: PKG-INFO  (+4 more)
tests/: __init__.py  test_demo_slice.py
(+31 files in other folders)
